plugins {
    id 'java'
    id 'org.jetbrains.intellij' version '0.7.3'
//    id 'org.jetbrains.kotlin.jvm' version '1.4.21'
}

group 'org.easysoc'
version pluginVersion

sourceCompatibility = 1.8
targetCompatibility = 1.8

repositories {
    mavenLocal()
    mavenCentral()
//    maven {
//        url 'https://oss.sonatype.org/content/repositories/snapshots/'
//    }
}

dependencies {
    implementation ('edu.berkeley.cs:treadle_2.12:1.5-SNAPSHOT') {
//        exclude module: 'scala-jline'
//        exclude module: 'protobuf-java'
    }
}

// See https://github.com/JetBrains/gradle-intellij-plugin/
intellij {
    // version and localPath should not be specified at the same time
    // The path to locally installed IDE distribution that should be used as a dependency.
    localPath "/home/itviewer/Downloads/software/chip"

    // https://blog.jetbrains.com/platform/2019/06/java-functionality-extracted-as-a-plugin/
     plugins 'org.jetbrains.plugins.terminal'
    downloadSources false
}

runIde {
    // https://bintray.com/jetbrains/intellij-jbr/jbrsdk11-linux-x64#files
    jbrVersion "11_0_10b1428.2"
    ideDirectory "/home/itviewer/Downloads/software/chip"
    jvmArgs '-Didea.platform.prefix=Chip'
    //for jbr11
    jvmArgs '--add-exports=java.base/jdk.internal.vm=ALL-UNNAMED','-Djdk.module.illegalAccess.silent=true'
}

patchPluginXml {
    sinceBuild "203"
    untilBuild "211.*"
}

publishPlugin {
    token = System.getenv("PublishToken")
}

// https://docs.gradle.org/current/userguide/working_with_files.html
task deployLauncher(type: Copy) {
    from "src/main/webapp"
    into "${runIde.pluginsDirectory}/${project.name}/webapp"
}
// buildPlugin and runIde task depend on prepareSandbox
prepareSandbox.finalizedBy(deployLauncher)

buildSearchableOptions.onlyIf { false }
jarSearchableOptions.onlyIf { false }

//prepareSandbox.onlyIf { false }
